# comfyui-mcp

./: .gitignore  README.md  pyproject.toml
src/comfyui_mcp/: __init__.py  client.py  config.py  node_cache.py  polling.py  server.py  workflow_export.py  workflows.py
src/comfyui_mcp/resources/: resources.py
src/comfyui_mcp/tools/: api_runner.py  builder.py  discovery.py  generate.py  models.py  system.py
tests/: test_builder.py  test_client.py  test_discovery.py  test_node_cache.py  test_tools.py  test_workflows.py
