[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "comfyui-mcp"
version = "0.1.0"
description = "MCP server for ComfyUI image generation"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "aiohttp>=3.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aioresponses>=0.7.8",
]

[project.scripts]
comfyui-mcp = "comfyui_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/comfyui_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
